--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,9 @@
     <distributionManagement>
         <repository>
             <id>deploymentRepo</id>
-            <name>Nexus Release Repository</name>
+            <name>Nexus Repository</name>
             <url>http://192.168.33.10:8081/repository/maven-releases/</url>
         </repository>
-        <snapshotRepository>
-            <id>snapshotRepo</id>
-            <name>Nexus Snapshot Repository</name>
-            <url>http://192.168.33.10:8081/repository/maven-snapshots/</url>
-        </snapshotRepository>
     </distributionManagement>
 
     <!-- Dependencies -->
